# NEVC-MTR1-GUI

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  SAFETY.md  build.rs
.github/workflows/: release.yml
src/: app.rs  main.rs
src/firmware/: mod.rs
src/scpi/: mod.rs
src/serial/: mod.rs
src/ui/: config.rs  connection.rs  firmware.rs  graphs.rs  log_panel.rs  mod.rs  motor.rs  style.rs
