[package]
name = "nevc_mtr1_gui"
version = "0.1.0"
edition = "2021"
description = "Nexperia Motor Driver GUI for NEVC-MTR1 (Arduino Leonardo, SCPI over USB-Serial)"
authors = ["Nexperia"]

[[bin]]
name = "nevc_mtr1_gui"
path = "src/main.rs"

[dependencies]
# GUI framework — declarative, cross-platform, iced 0.12 stable API
iced = { version = "0.12", features = ["tokio", "canvas"] }

# Serial port communication and enumeration
serialport = "4"

# Async runtime for background serial I/O and polling
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Ergonomic error handling
anyhow = "1"

# Serialisation for config persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native file-picker dialogs (save CSV)
rfd = { version = "0.14", features = ["tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1   # faster debug builds with iced
