[package]
name = "nevc_mtr1_gui"
version = "0.1.1"
edition = "2024"
description = "Nexperia Motor Driver GUI for NEVC-MTR1 (Arduino Leonardo, SCPI over USB-Serial)"
authors = ["Nexperia"]

[[bin]]
name = "NEVC-MTR1-GUI"
path = "src/main.rs"

[dependencies]
# GUI framework — declarative, cross-platform, iced 0.12 stable API
iced = { version = "0.12", features = ["tokio", "canvas", "svg", "image"] }

# Serial port communication and enumeration
serialport = "4"

# Async runtime for background serial I/O and polling
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Ergonomic error handling
anyhow = "1"

# Serialisation for config persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native file-picker dialogs (save CSV)
# default-features disabled to avoid enabling ashpd/async-std alongside ashpd/tokio on Linux
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }

# HTTP client for downloading Arduino CLI and firmware source
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# ZIP archive extraction (Arduino CLI download, firmware source download)
zip = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[build-dependencies]
winresource = "0.1.19"

[profile.dev]
opt-level = 1   # faster debug builds with iced
